# cmake-demo

./: Readme.md
demo1/: CMakeLists.txt
demo2/: CMakeLists.txt  main.cpp
demo3/: CMakeLists.txt
demo3/inc/: test1.h  test2.h
demo3/src/: test1.cpp  test2.cpp
demo4/: CMakeLists.txt
demo4/src/: add.cpp
demo5/: CMakeLists.txt  main.cpp
demo5/src/: div.cpp  mult.cpp
demo6/: CMakeLists.txt
demo6/src/: mult.cpp  sub.cpp
demo7/: CMakeLists.txt
demo7/inc/: calc.h
demo7/src/: div.cpp
demo8/: CMakeLists.txt  main.cpp
demo8/moduleA/: CMakeLists.txt
demo8/moduleA/inc/: a.h
demo8/moduleA/src/: a.cpp
demo8/moduleB/: CMakeLists.txt
demo8/moduleB/inc/: b.h
demo8/moduleB/src/: b.cpp
